crates/engage/tests/integrations/snapshots/integrations__tasks_dependency_cycle@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about dependency cycles.
---
Errors:

#1
Error: refusing to run tasks with dependency cycles
Help: try using `engage dot` to visualize the graph to determine where to break the cycles
Note: running tasks with dependency cycles would result in a deadlock

#2 (which caused #1)
Error: the dependencies between `b` and `a` form a cycle

#3 (which caused #1)
Error: the dependencies between `e`, `d`, and `c` form a cycle
