crates/engage/tests/integrations/snapshots/integrations__try_nonexistent_process@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about the requested process not existing.
---
Some(
    2,
)
