crates/engage/tests/integrations/snapshots/integrations__try_nonexistent_process@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about the requested process not existing.
---
Errors:

#1
Error: one or more of the selected processes were not found

#2 (which caused #1)
Error: the process `doesntexist` was not found
