crates/engage/tests/integrations/snapshots/integrations__try_nonexistent_task@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about the requested task not existing.
---
Some(
    2,
)
