crates/engage/tests/integrations/snapshots/integrations__try_nonexistent_task@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about the requested task not existing.
---
Errors:

#1
Error: no such task `doesntexist`
